--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "start": "^5.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
